fix GET pagination. refactor naming. update docs.
